# hookline

./: .gitignore  BUILDING.md  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
assets/levels/: basic_level.json
assets/shaders/: BasicMeshShader.frag  BasicMeshShader.vert  CollectibleShader.frag  CyberpunkBackgroundShader.frag  CyberpunkBackgroundShaderFull.frag  GrappleBoxShader.frag  GrappleRopeShader.frag  PlayerShader.frag  ProjectileShader.frag  SimplePosition.vert  TextShader.frag  TextShader.vert  WallShader.frag
docs/: index.html  index.md  stylesheet.css
src/: constants.hpp  main.cpp
src/core/: Application.cpp  Application.hpp  AssetManager.cpp  AssetManager.hpp  CameraComponent.hpp  Game.cpp  Game.hpp  InputComponent.hpp  Level.cpp  Level.hpp  RenderComponent.cpp  TransformComponent.hpp
src/core/game/: GameMode.hpp  GameOverMenuMode.cpp  GameOverMenuMode.hpp  PauseMenuMode.cpp  PauseMenuMode.hpp  PlayMode.cpp  PlayMode.hpp  StartMenuMode.cpp  StartMenuMode.hpp  WinMenuMode.cpp  WinMenuMode.hpp
src/core/text/: TextComponent.cpp  TextComponent.hpp  TextRenderer.cpp  TextRenderer.hpp
src/gameplay/: CollectableComponent.hpp  CollectableSystem.cpp  CollectableSystem.hpp  HealthComponent.hpp  LevelData.cpp  ProjectileComponent.hpp  ProjectileSpawnerComponent.hpp  ProjectileSystem.cpp  ProjectileSystem.hpp  RespawnerQueue.cpp  RespawnerQueue.hpp
src/physics/: ColliderComponent.cpp  ColliderComponent.hpp  CollisionSystem.cpp  CollisionSystem.hpp  ForceComponent.cpp  ForceComponent.hpp  GrapplingHook.cpp  GrapplingHook.hpp  PhysicsSystem.cpp  RigidBodyComponent.cpp  RigidBodyComponent.hpp  util.cpp  util.hpp
src/render/: Mesh2D.cpp  Mesh2D.hpp  RenderComponent.cpp  RenderComponent.hpp  RenderSystem.cpp  RenderSystem.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Vertex.hpp  VertexArrayObject.cpp  VertexArrayObject.hpp  VertexBufferObject.cpp  VertexBufferObject.hpp
src/shader/: BasicMeshShader.cpp  BasicMeshShader.hpp  CollectibleShader.cpp  CollectibleShader.hpp  CyberpunkBackgroundShader.cpp  CyberpunkBackgroundShader.hpp  CyberpunkBackgroundShaderFull.cpp  CyberpunkBackgroundShaderFull.hpp  CyberpunkBackgroundShaderNew.cpp  CyberpunkBackgroundShaderNew.hpp  GrappleBoxShader.cpp  GrappleBoxShader.hpp  GrappleRopeShader.cpp  GrappleRopeShader.hpp  PlayerShader.cpp  PlayerShader.hpp  ProjectileShader.cpp  ProjectileShader.hpp  TextShader.cpp  TextShader.hpp  WallShader.cpp  WallShader.hpp  stringifyShader.py  test.glsl  util.cpp  util.hpp
src/util/: misc.cpp  misc.hpp
